feat: add swagger annotations for subscription domain
